--- a/tests/test.ipynb
+++ b/tests/test.ipynb
@@ -1,6 +1,109 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Environment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "print(torch.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.2.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torchkbnufft\n",
+    "print(torchkbnufft.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python 3.6.8 :: Anaconda, Inc.\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python --version "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Thu Jul 22 18:38:21 2021       \n",
+      "+-----------------------------------------------------------------------------+\n",
+      "| NVIDIA-SMI 470.42.01    Driver Version: 470.42.01    CUDA Version: 11.4     |\n",
+      "|-------------------------------+----------------------+----------------------+\n",
+      "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
+      "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
+      "|                               |                      |               MIG M. |\n",
+      "|===============================+======================+======================|\n",
+      "|   0  Tesla V100-SXM2...  Off  | 00000000:61:00.0 Off |                    0 |\n",
+      "| N/A   35C    P0    56W / 300W |      0MiB / 16160MiB |      2%      Default |\n",
+      "|                               |                      |                  N/A |\n",
+      "+-------------------------------+----------------------+----------------------+\n",
+      "                                                                               \n",
+      "+-----------------------------------------------------------------------------+\n",
+      "| Processes:                                                                  |\n",
+      "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\n",
+      "|        ID   ID                                                   Usage      |\n",
+      "|=============================================================================|\n",
+      "|  No running processes found                                                 |\n",
+      "+-----------------------------------------------------------------------------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "!nvidia-smi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Simulation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -26,9 +129,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Reconstruction"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -525,6 +637,90 @@
    ],
    "source": [
     "!python ../radialmri/iGRASP_recon.py --input ../sample/kspace/BC33_sim21spokes_origsmap_None_1.33e-06.mat --output BC33_sim_recon_niter32_ -n 32"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cartesian Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/gpfs/share/apps/anaconda3/gpu/5.2.0/lib/python3.6/site-packages/dask/config.py:161: YAMLLoadWarning: calling yaml.load() without Loader=... is deprecated, as the default Loader is unsafe. Please read https://msg.pyyaml.org/load for full details.\n",
+      "  data = yaml.load(f.read()) or {}\n",
+      "input noise level = None\n",
+      "Running simulation\n",
+      "target.shape torch.Size([22, 2, 320, 320])\n",
+      "torch.Size([16, 22, 320, 320, 2])\n",
+      "y.shape torch.Size([16, 22, 320, 320, 2])\n",
+      "cimage, coil_sensitivities.shape torch.Size([16, 22, 320, 320, 2]) torch.float32 cpu torch.Size([16, 22, 2, 320, 320]) torch.float32 cuda:0\n",
+      "torch.Size([1, 22, 2, 320, 320])\n",
+      "simulated_kspace_cartesian.shape, recon_fromsim_cartesian.shape torch.Size([22, 16, 2, 320, 320]) torch.Size([1, 22, 2, 320, 320])\n",
+      "noise level 4.882044208898151e-09\n"
+     ]
+    }
+   ],
+   "source": [
+    "caseidx = \"BC33\"\n",
+    "!python ../radialmri/sim.py -c $caseidx -d ../sample/kspace --Cartesian #remove dcomp multiplication in simulation, no intensity correction. Thu Jan 28 14:03:21 EST 2021"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['__header__', '__version__', '__globals__', 'simulated_kspace_cartesian', 'simulated_target', 'target_recombine', 'mask', 'smap_complex', 'noise', 'nl'])\n",
+      "(22, 16, 2, 320, 320)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from scipy.io import loadmat\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "kspace = loadmat(\"../sample/kspace/BC33_cartesian_origsmap_None_4.88e-09.mat\")\n",
+    "print(kspace.keys())\n",
+    "print(kspace['simulated_kspace_cartesian'].shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = 10\n",
+    "c = 6\n",
+    "plt.imshow(np.fft.fftshift(np.sqrt(kspace['simulated_kspace_cartesian'][t, c, 0]**2 + kspace['simulated_kspace_cartesian'][t, c, 1]**2)))\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = 10\n",
+    "c = 10\n",
+    "kspace_temp = (kspace['simulated_kspace_cartesian'][t, c, 0] + 1j*kspace['simulated_kspace_cartesian'][t, c, 1])\n",
+    "plt.imshow(np.abs((np.fft.ifft2(kspace_temp))))\n",
+    "plt.show()"
    ]
   }
  ],
